// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test declarative (jsx) <fbs> syntax translation should convert a common string 1`] = `
import { fbs } from "fbtee";
const fbsCommonElem = fbs._("Post", null, {
  hk: "2y9OIZ",
});

`;

exports[`Test declarative (jsx) <fbs> syntax translation should convert a simple string 1`] = `
import { fbs } from "fbtee";
const fbsElem = fbs._("a simple string", null, {
  hk: "1jd7FI",
});

`;

exports[`Test declarative (jsx) <fbs> syntax translation should convert a string with a parameter 1`] = `
import { fbs } from "fbtee";
const fbsElem = fbs._(
  "a string with a {param name}",
  [fbs._param("param name", parameter)],
  {
    hk: "46D2WH",
  }
);

`;

exports[`Test declarative (jsx) <fbs> syntax translation should handle <fbs:enum> 1`] = `
import { fbs } from "fbtee";
import aEnum from "Test$FbtEnum";
var x = fbs._(
  {
    id1: "Click to see groups",
    id2: "Click to see photos",
    id3: "Click to see videos",
  },
  [fbs._enum(id, aEnum)],
  {
    hk: "3SHnwE",
  }
);

`;

exports[`Test functional fbs() syntax translation should convert a common string 1`] = `
import { fbs } from "fbtee";
const fbsCommonCall = fbs._("Post", null, {
  hk: "2y9OIZ",
});

`;

exports[`Test functional fbs() syntax translation should convert a simple string 1`] = `
import { fbs } from "fbtee";
const fbsCall = fbs._("a simple string", null, {
  hk: "1jd7FI",
});

`;

exports[`Test functional fbs() syntax translation should convert a string with a gender parameter 1`] = `
import { fbs } from "fbtee";
import IntlVariations from "IntlVariations";
const fbsCall = fbs._(
  {
    "*": "a string with a {param name}",
  },
  [fbs._param("param name", parameter, [1, IntlVariations.GENDER_MALE])],
  {
    hk: "3lgixW",
  }
);

`;

exports[`Test functional fbs() syntax translation should handle fbs.enum 1`] = `
import { fbs } from "fbtee";
import aEnum from "Test$FbtEnum";
var x = fbs._(
  {
    id1: "Click to see groups",
    id2: "Click to see photos",
    id3: "Click to see videos",
  },
  [fbs._enum(id, aEnum)],
  {
    hk: "3SHnwE",
  }
);

`;
